--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,20 @@
 }
 
 .attribution { 
-    font-size: 11px; 
+    font-size: 0.688rem; 
     text-align: center; 
-    position: absolute;
-    bottom: 0;
-    left: 25%;
-    right: 25%;
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
 
 /*font-family: 'Red Hat Display', sans-serif;*/
+
+html {
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
+}
 
 body {
     font-family: 'Red Hat Display', sans-serif;
@@ -38,26 +40,26 @@ main {
     position: relative;
     width: min-content;
     text-align: center;
-    margin-top: 10%;
+    margin-top: 10rem;
 }
 
 .container-info {
     max-width: 100%;
     background-color: #FFF;
     text-align: center;
-    padding: 20px 50px;
-    border-radius: 0 0 15px 15px;
-    margin-top: -5px;
+    padding: 1.25rem 3.125rem;
+    border-radius: 0 0 1rem 1rem;
+    margin-top: -0.5rem;
 }
 
 .container-info__plan {
     display: flex;
     align-items: center;
-    gap: 23%;
+    gap: 3rem;
     background-color: var(--veryPaleBlue);
-    padding: 20px;
-    margin-bottom: 10%;
-    border-radius: 15px;
+    padding: 1.25rem;
+    margin-bottom: 1rem;
+    border-radius: 1rem;
 }
 
 .container-plan__cost {
@@ -84,12 +86,12 @@ main {
 
 .container-button__payment {
     background-color: var(--brightBlue);
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 0.625rem;
+    padding: 0.625rem;
     text-decoration: none;
     color: #FFF;
-    margin-bottom: 10%;
-    box-shadow: 0px 15px 30px -12px hsl(224, 23%, 55%);
+    margin-bottom: 1rem;
+    box-shadow: 0rem 1rem 2rem -1rem hsl(224, 23%, 55%);
 }
 
 .container-button__payment:hover {
@@ -100,7 +102,7 @@ main {
     text-decoration: none;
     color: var(--DesaturatedBlue);
     font-weight: 700;
-    margin-bottom: 5%;
+    margin-bottom: 0.5rem;
 }
 
 .container-button__cancel:hover {
@@ -120,7 +122,7 @@ main {
 }
 
 .container img {
-    border-radius: 15px 15px 0 0;
+    border-radius: 1rem 1rem 0 0;
 }
 
 @media (max-width: 450px) {
@@ -131,25 +133,25 @@ main {
         width: 100%;
     }
     .container-info {
-        padding: 20px 30px;
+        padding: 1.25rem 1.875rem;
     }
     .container-info__plan a{
-        font-size: 12px;
+        font-size: 0.75rem;
     }
     .container-plan__cost {
-        column-gap: 8px;
-        gap: 5px;
+        column-gap: 0.5rem;
+        gap: 0.4rem;
     }
     .container-plan__type{
         display: flex;
         align-items: flex-end;
         justify-content: center;
-        font-size: 11px;
+        font-size: 0.688rem;
     }
     .container-plan__price{
         display: flex;
         align-items: flex-start;
         justify-content: center;
-        font-size: 12px;
+        font-size: 0.75rem;
     }
 }
